修复读取privatekey时，报错的问题