@@ -7,13 +7,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.security.KeyFactory;
-import java.security.KeyPair;
-import java.security.KeyPairGenerator;
-import java.security.NoSuchAlgorithmException;
-import java.security.PrivateKey;
-import java.security.PublicKey;
-import java.security.SecureRandom;
+import java.security.*;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
@@ -49,7 +43,8 @@ public class RsaUtils {
    */
   public static PrivateKey getPrivateKey(String filename) throws IOException, InvalidKeySpecException, NoSuchAlgorithmException {
     Resource classPathResource = new ClassPathResource(filename);
-    return getPrivateKey(Files.readAllBytes(classPathResource.getFile().toPath()));
+    InputStream inputStream = classPathResource.getInputStream();
+    return getPrivateKey(inputStream.readAllBytes());
   }
 
   /**
